--- a/gh-profile-viewer/src/App.css
+++ b/gh-profile-viewer/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'arial', sans-serif;
   background: linear-gradient(to bottom, #8d7bd3, #c5bdd3);
   min-height: 100vh;
   display: flex;
@@ -11,6 +11,24 @@ body {
 
 .app-container {
   text-align: center;
+  position: static;
+  padding: 20px;
+ 
+}
+
+.app-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 50%;
+  bottom: 0;
+  background: url('./assets/logo.png') no-repeat center center;
+  background-position: center;
+  opacity: 0.1;
+  z-index: -1;
+  background-size: cover;
+  opacity: 0.1;
   color: white;
   max-width: 900px;
   width: 100%;
@@ -24,17 +42,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
 }
 
 .title {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2rem;;
   margin-bottom: 20px;
 }
 
 .description {
-  font-size: 2.2rem;
-  font-weight: bold;
-  margin-bottom: 40px;
+  font-family: Kalnia, sans-serif;
+  font-size: 3.2rem;
+  font-weight: 520;
+  margin-bottom: 60px;
+
 }
